@@ -1,3 +1,13 @@
+2005-01-09  Benhur Stein <benhur@inf.ufsm.br>
+        * SpaceTimeViewer/STEntityTypeLayout.[hm]: declare and implement
+          accessors for minValue and maxValue (for storing limits of graph)
+	* SpaceTimeViewer/STEntityTypeLayout.gorm: added a new Form for
+          max & min values of variables; 
+        * SpaceTimeViewer/STEntityTypeLayoutController.[mh]: make use of new
+          variables and Form (they are not saved in defaults);
+        * SpaceTimeViewer/DrawView+Drawing.m: use min and maxValue from 
+          descriptor, if valid.
+
 2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
 	* GNUmakefile, Paje/PajeController.m, Paje/PajeTraceController.m:
 	  compile and load FieldFilter
